# linux_file_search

./: .gitignore  Cargo.toml  README.md  bashrc  fdfind.sh  fdfind_dir.sh  find.sh  locate.sh
src/: Utils.rs  lib.rs  search.rs  setup.rs  test.rs  update.rs
