[package]
name = "file_search"
version = "0.1.0"
edition = "2021"


#[[bin]]
#name = "test"
#path = "src/test.rs"

[[bin]]
name = "search"
path = "src/search.rs"


[[bin]]
name = "setup"
path = "src/setup.rs"


[[bin]]
name = "update"
path = "src/update.rs"

[dependencies]
clap = "3.0"
daemonize = "0.5.0"
rusqlite = "0.31.0"
serde = { version = "1.0.203", features = ["derive"] }
walkdir = "2.5.0"
toml = "0.8.13"
regex = "1.10.4"
dialoguer = "0.11.0"

